--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "react-spinners": "^0.11.0",
+    "sass": "^1.59.3",
     "simple-react-lightbox": "^3.6.9-0",
     "swiper": "^8.0.7",
     "web-vitals": "^2.1.4",
@@ -30,7 +31,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "npm i && react-scripts build"
-
   },
   "eslintConfig": {
     "extends": [
