--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.17.2",
+    "gsap": "^3.11.4",
     "process": "^0.11.10",
     "react": "^17.0.2",
     "react-animated-cursor": "^2.4.0",
