--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-spinners": "^0.11.0",
     "sass": "^1.59.3",
     "simple-react-lightbox": "^3.6.9-0",
+    "sweetalert2": "^11.7.3",
     "swiper": "^8.0.7",
     "web-vitals": "^2.1.4",
     "wowjs": "^1.1.3"
